Add vercel.json rewrites + static privacy/support

--- a/public/privacy.html
+++ b/public/privacy.html
@@ -8,26 +8,16 @@
 <p>Last updated: <script>document.write(new Date().toISOString().slice(0,10))</script></p>
 <h2>Data We Collect</h2>
 <ul>
-  <li>Email address (account & login)</li>
-  <li>User ID</li>
-  <li>User content (favorites, ratings, posts, concert photos you upload)</li>
-  <li>Product interactions</li>
-  <li>Diagnostics (performance/crash data)</li>
-  <li>Photos or videos (if you choose to upload them)</li>
+  <li>Email address (account & login)</li><li>User ID</li>
+  <li>User content (favorites, ratings, posts, concert photos)</li>
+  <li>Product interactions</li><li>Diagnostics (performance/crash)</li>
+  <li>Photos or videos (if uploaded)</li>
 </ul>
 <h2>How We Use Information</h2>
-<ul>
-  <li>App functionality and account management</li>
-  <li>Security, integrity and support</li>
-  <li>Performance and reliability</li>
-</ul>
+<ul><li>App functionality & account management</li><li>Security & support</li><li>Performance</li></ul>
 <p>We do <strong>not</strong> sell personal data or track you across third-party apps or websites.</p>
-<h2>Sharing</h2>
-<p>Only with service providers required to run the app (hosting/database) under data-processing agreements.</p>
-<h2>Retention & Deletion</h2>
-<p>Request deletion anytime at <a href="mailto:hello@walcord.com">hello@walcord.com</a>.</p>
-<h2>Children</h2>
-<p>Walcord is intended for users aged 13+.</p>
-<h2>Contact</h2>
-<p>Email: <a href="mailto:hello@walcord.com">hello@walcord.com</a></p>
+<h2>Sharing</h2><p>Only with essential service providers (hosting/DB) under DPAs.</p>
+<h2>Retention & Deletion</h2><p>Request deletion: <a href="mailto:hello@walcord.com">hello@walcord.com</a></p>
+<h2>Children</h2><p>Walcord is intended for users aged 13+.</p>
+<h2>Contact</h2><p>Email: <a href="mailto:hello@walcord.com">hello@walcord.com</a></p>
 </main></body></html>
