--- a/public/support.html
+++ b/public/support.html
@@ -1,26 +1,10 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Support — Walcord</title>
-    <meta name="description" content="Support for Walcord users" />
-    <style>
-      body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; margin: 0; }
-      .wrap { max-width: 720px; margin: 0 auto; padding: 48px 24px; }
-      h1 { font-weight: 700; margin: 0 0 16px; }
-      p, li { line-height: 1.6; }
-    </style>
-  </head>
-  <body>
-    <main class="wrap">
-      <h1>Support</h1>
-      <p>Need help? Write us at <a href="mailto:hello@walcord.com">hello@walcord.com</a></p>
-      <ul>
-        <li>Account issues (sign-in, password, email change)</li>
-        <li>Data requests (export/deletion)</li>
-        <li>Bug reports and feedback</li>
-      </ul>
-    </main>
-  </body>
-</html>
+<!doctype html><html lang="en"><head>
+<meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/>
+<title>Support — Walcord</title>
+<meta name="description" content="Support for Walcord users"/>
+<style>body{font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;margin:0}.wrap{max-width:720px;margin:0 auto;padding:48px 24px}h1{margin:0 0 16px}p,li{line-height:1.6}</style>
+</head><body><main class="wrap">
+<h1>Support</h1>
+<p>Write us at <a href="mailto:hello@walcord.com">hello@walcord.com</a></p>
+<ul><li>Account issues</li><li>Data requests (export/deletion)</li><li>Bug reports</li></ul>
+</main></body></html>
